# reussir-tcf-irn

./: .env.dev.example  .gitignore  AGENTS.md  Caddyfile  DEPLOY.md  README.md  REFACTOR.md  SPEC.md  docker-compose.deploy.yml  docker-compose.yml  manage.py  pyproject.toml
backend/: AGENTS.md  Dockerfile  README.md  migrate.sh  pyproject.toml
backend/exams/: admin.py  models.py
backend/exams/migrations/: 0001_initial.py
backend/grading/: tests.py
backend/grading/migrations/: 0001_initial.py  0002_taskgrade_audio_feedback_and_more.py
backend/grading/services/: audio_feedback.py  grade_attempt.py
backend/practice/: tests.py
backend/simulations/: forms.py  models.py  tests.py  views.py
backend/simulations/api/: serializers.py  urls.py  views.py
backend/simulations/migrations/: 0001_initial.py
backend/simulations/services/: scoring.py  start_session.py  word_count.py
backend/tcf_irn/: asgi.py  celery.py  settings.py  urls.py
backend/templates/: base.html
backend/templates/registration/: login.html
backend/templates/simulations/: _progress.html  dashboard.html  history.html  practice_start.html  report.html  task_grade.html  task_written.html
docs/: API.md  ARCHITECTURE.md  BUSINESS_RULES.md
exams/: tests.py
frontend/: .dockerignore  .prettierignore  AGENTS.md  Dockerfile  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json
grading/: admin.py  models.py
practice/: tests.py  urls.py  views.py
product_research/: EXAM_STRUCTURE.md  QUESTION_BANK_GUIDANCE.md  app.py  index.html  question_bank.json  question_bank.json.bak  (+1 more)
(+70 files in other folders)
