[project]
name = "tcf-irn-backend"
version = "0.1.0"
description = "Django API backend for TCF IRN practice simulations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "dj-database-url>=3.1.2",
    "django>=5.2.14",
    "django-redis>=6.0.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "flower>=2.0.1",
    "gunicorn>=26.0.0",
    "openai>=2.36.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "whitenoise>=6.12.0",
]
